rename webdev page, fix cookie spacing for phone

--- a/src/App.css
+++ b/src/App.css
@@ -518,7 +518,7 @@ header img {
     font-weight: bold;
     margin-top: 20px;
     padding-left: 5px;
-    padding-top: 28px;
+    padding-top: 32px;
     transform: rotate(90deg);
     white-space: nowrap;
 }
